--- a/brief.html
+++ b/brief.html
@@ -76,7 +76,7 @@
                     <div class="du_an">
                         <div class="icon"> <img src="Photo/icon3.png" alt="" ></div>
                         <div class="Du_an_content main_text">
-                            <h3>Dự án trọng điểm</h3>
+                            <h3>Các dự án trọng điểm</h3>
                             <h4 id="du_an_text">Demo</h4>
                             <button class="body_btn"> Xem thêm</button>
                         </div>
